<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:context="fragments.InventoryFragment">

    <TextView
        android:id="@+id/allItemsLabel"
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:layout_alignParentTop="true"
        android:background="#F4F3F3"
        android:gravity="center_vertical"
        android:paddingLeft="10dp"
        android:text="@string/inventory_text"
        android:textSize="18sp"/>

    <ListView
        android:id="@+id/listViewInventory"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/inventoryAddToOrder"
        android:layout_below="@+id/allItemsLabel"
        android:choiceMode="multipleChoice"></ListView>

    <Button
        android:id="@+id/inventoryAddToOrder"
        android:layout_width="170dp"
        android:layout_height="58dp"
        android:layout_alignParentBottom="true"
        android:text="@string/custom_next"
        android:visibility="visible"/>

    <Button
        android:id="@+id/manualTransactionBtn"
        android:layout_width="170dp"
        android:layout_height="58dp"
        android:layout_alignParentBottom="true"
        android:layout_toRightOf="@+id/inventoryAddToOrder"
        android:gravity="center"
        android:text="@string/manual_transaction"
        android:visibility="visible"/>

    <Button
        android:id="@+id/inventorySaveOrder"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:text="Save Order"
        android:visibility="invisible"/>
</RelativeLayout>