<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                tools:context="fragments.SendReceiptFragment">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:layout_marginBottom="17dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:gravity="center_horizontal"
        android:text="@string/send_receipt_text"/>

    <Button
        android:id="@+id/send_confirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/no_receipt"
        android:enabled="true"
        android:text="@string/send_receipt_send"/>

    <Button
        android:id="@+id/no_receipt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/no_receipt"/>

    <LinearLayout
        android:id="@+id/sendReceiptDetailsContainer"
        android:layout_width="match_parent"
        android:layout_height="230dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/textView2"
        android:orientation="vertical"
        android:paddingTop="65dp"
        android:visibility="visible">

        <EditText
            android:id="@+id/sendReceiptPhoneEdit"
            android:layout_width="match_parent"
            android:layout_height="61dp"
            android:gravity="center_vertical"
            android:hint="Phone number"
            android:imeOptions="actionDone"
            android:inputType="number"
            android:lines="1"
            android:maxLength="10"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"/>

        <EditText
            android:id="@+id/sendReceiptEmailEdit"
            android:layout_width="match_parent"
            android:layout_height="61dp"
            android:gravity="center_vertical"
            android:hint="Email"
            android:imeOptions="actionDone"
            android:inputType="textEmailAddress"
            android:lines="1"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"/>
    </LinearLayout>
</RelativeLayout>